# ids

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
Docs/: Building.md  ExportMacroDefinitions.md  Running.md
Sources/idt/: idt.cc
Sources/libtool/: libtool.cc
Support/ResponseFiles/: ignored-builtins.rsp
Tests/: Attributes.hh  ClassTemplateArgumentDeduction.hh  FriendDecls.hh  FriendReadsPrivateStaticField.hh  Functions.hh  GlobalIncludes.cc  IgnoredFunctions.hh  KnownBuiltins.hh  MissingInclude.hh  MultipleFiles.hh  OutOfLineInlineMethods.hh  PrivateMembers.hh  PrivateMethods.hh  PureVirtualDestructor.hh  QualifiedRecordNames.hh  SourceFile.cc  TemplateCallsPrivateMethod.hh  TemplateClasses.hh  TemplateFunctions.hh  Templates.hh  VTables.hh  Variables.cc  Variables.hh  lit.cfg
Tests/include/: GlobalHeader.h
